# cc-deck

./: .coderabbit.yaml  .gitignore  .goreleaser.yaml  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  base-images.yaml  smoke_test.sh  transcript-2026-04-30-raw.txt  zellij-dev.kdl  zellij-layout.kdl
.beads/: issues.jsonl  metadata.json
.claude/: sdd-handoff.md  settings.json  settings.local.json
.playwright-mcp/: page-2026-05-21T19-59-11-161Z.yml  page-2026-05-23T07-35-28-654Z.yml  page-2026-05-23T07-35-50-907Z.yml  page-2026-05-23T07-36-06-307Z.yml  page-2026-05-23T07-37-01-599Z.yml  page-2026-05-23T07-37-27-089Z.yml  page-2026-05-23T07-44-04-593Z.yml  page-2026-05-23T07-54-00-978Z.yml  page-2026-05-23T07-54-06-490Z.yml  page-2026-05-23T07-54-21-356Z.yml  page-2026-05-23T07-54-29-615Z.yml  (+7 more)
cc-zellij-plugin/: Cargo.toml  zellij-layout.kdl
cc-zellij-plugin/proptest-regressions/: fuzz_tests.txt
cc-zellij-plugin/proptest-regressions/sidebar_plugin/: fuzz_tests.txt
cc-zellij-plugin/src/: attend.rs  config.rs  debug.rs  fuzz_tests.rs  git.rs  keybindings.rs  lib.rs  main.rs  notification.rs  perf.rs  pipe_handler.rs  recent.rs  rename.rs  session.rs  sidebar.rs  state.rs  state_machine_tests.rs  sync.rs  wasm_compat.rs
cc-zellij-plugin/src/controller/: actions.rs  events.rs  hooks.rs  integration_tests.rs  mod.rs  render_broadcast.rs  sidebar_registry.rs  state.rs
cc-zellij-plugin/src/sidebar_plugin/: fuzz_tests.rs  input.rs  integration_tests.rs  mod.rs  modes.rs  rename.rs  render.rs  state.rs  test_helpers.rs
src/: group.rs  (+8 more)
(+1211 files in other folders)
