[package]
name = "cc-deck"
version = "0.8.0"
edition = "2021"
description = "Zellij plugin for managing Claude Code sessions (controller + sidebar)"

[features]
default = []
controller = []
sidebar = []

[[bin]]
name = "cc_deck_controller"
path = "src/main.rs"
required-features = ["controller"]

[[bin]]
name = "cc_deck_sidebar"
path = "src/main.rs"
required-features = ["sidebar"]

[dependencies]
zellij-tile = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "fat"          # Full link-time optimization across all crates
codegen-units = 1    # Single codegen unit for maximum optimization
opt-level = "z"      # Optimize for size (smaller WASM = faster wasmi interpretation)
strip = true         # Strip debug symbols from WASM binary
panic = "abort"      # No unwinding overhead (wasmi traps on panic anyway)

# Fast iteration profile: optimized enough for wasmi but fast to compile
[profile.dev-opt]
inherits = "dev"
opt-level = 1        # Basic optimizations (huge difference for wasmi interpreter)
